--- a/.github/workflows/cargo-bump.yml
+++ b/.github/workflows/cargo-bump.yml
@@ -1,42 +1,14 @@
-name: cargo-bump
-
+name: cargobump
 on:
   push:
     tags:
       - v*
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  test:
+  bump-version:
     runs-on: ubuntu-latest
-    name: Test cargo-bump
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Run cargo-bump
-        id: cargo-bump
-        uses: ./
-        with:
-          working-directory: test-package
-      - name: Verify Changed files
-        id: verify-changed-files
-        uses: tj-actions/verify-changed-files@v20
-        with:
-          files: |
-            test-package/**
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v7.0.7
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
-        with:
-          base: "main"
-          labels: "merge when passing"
-          title: "chore: upgraded test-package"
-          branch: "chore/upgraded-to-${{ steps.cargo-bump.outputs.new_version }}"
-          body: "View [CHANGES](https://github.com/${{ github.repository }}/compare/${{ steps.cargo-bump.outputs.old_version }}...${{ steps.cargo-bump.outputs.new_version }})"
-          token: ${{ secrets.PAT_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Bump version
+        uses: tj-actions/cargo-bump@v3
+      # Commit and Push changes to the Cargo.toml
