--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -19,8 +19,9 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
+  workflow_dispatch: {}  # Allows manual trigger from GitHub Actions UI
   schedule:
-    - cron: '40 2 * * 1,3,5,6'
+    - cron: "14 2 * * *"  # Runs daily at 2 AM UTC
 
 permissions:
   contents: read
