--- a/.github/workflows/rustversion.yml
+++ b/.github/workflows/rustversion.yml
@@ -44,6 +44,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: update-cargo-toml
-          title: Update Cargo.toml: edition and rust-version
+          title: Update Cargo.toml
           body: |
             This pull request updates the edition and rust-version fields in the Cargo.toml file.
