--- a/.github/workflows/rustversion.yml
+++ b/.github/workflows/rustversion.yml
@@ -19,16 +19,27 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Fetch latest Rust version and edition
+        id: rust-info
+        run: |
+          # Get the latest Rust version
+          latest_version=$(rustc --version | awk '{print $2}')
+          echo "latest_version=$latest_version" >> $GITHUB_ENV
+
+          # Determine the latest edition (assuming 2024 is the latest for now)
+          latest_edition="2024"
+          echo "latest_edition=$latest_edition" >> $GITHUB_ENV
+
       - name: Update Cargo.toml
         run: |
-          # Update Cargo.toml if necessary
+          # Update Cargo.toml dynamically
           changes_made=false
-          if ! grep -q 'edition = "2024"' Cargo.toml; then
-            sed -i 's/edition = ".*"/edition = "2024"/g' Cargo.toml
+          if ! grep -q "edition = \"$latest_edition\"" Cargo.toml; then
+            sed -i "s/edition = \".*\"/edition = \"$latest_edition\"/g" Cargo.toml
             changes_made=true
           fi
-          if ! grep -q 'rust-version = "1.86.0"' Cargo.toml; then
-            sed -i 's/rust-version = ".*"/rust-version = "1.86.0"/g' Cargo.toml
+          if ! grep -q "rust-version = \"$latest_version\"" Cargo.toml; then
+            sed -i "s/rust-version = \".*\"/rust-version = \"$latest_version\"/g" Cargo.toml
             changes_made=true
           fi
 
@@ -37,21 +48,25 @@ jobs:
             git config --global user.name "github-actions"
             git config --global user.email "github-actions@github.com"
             git commit -am "Update Cargo.toml: edition and rust-version"
+            echo "changes_made=true" >> $GITHUB_ENV
           else
+            echo "changes_made=false" >> $GITHUB_ENV
             echo "No changes made to Cargo.toml"
           fi
 
       - name: Push changes
+        if: env.changes_made == 'true'
         uses: ad-m/github-push-action@v0.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: update-cargo-toml
 
       - name: Create pull request
+        if: env.changes_made == 'true'
         uses: peter-evans/create-pull-request@v7.0.8
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: update-cargo-toml
-          title: Update Cargo.toml
+          title: Update Cargo.toml to latest
           body: |
             This pull request updates the edition and rust-version fields in the Cargo.toml file.
