--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.2.2.
+        uses: actions/checkout@v4.2.2
 
       - name: Get the release version from the tag
         shell: bash
