--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,23 +1,25 @@
-# .github/workflows/release.yml
+name: CD
 
-on:
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
   release:
     types: [created]
 
 jobs:
-  release:
-    name: release ${{ matrix.target }}
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        target: [x86_64-pc-windows-gnu, x86_64-unknown-linux-musl]
+    env:
+      CARGO_TERM_COLOR: always
+      CARGO_PROFILE_TEST_DEBUG: 0
     steps:
       - uses: actions/checkout@v4.2.2
-      - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          RUSTTARGET: ${{ matrix.target }}
-          EXTRA_FILES: "README.md LICENSE"
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2.7.8
+
+      - run: |
+          cargo check
+          cargo test
+          cargo build --release
