--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,204 +1,34 @@
-name: "Build & Release"
+name: Release
 
 permissions:
-  # To upload files to GitHub Releases
   contents: write
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        type: string
-        description: "Version: (e.g. -> v3.1.4-alpha+159)"
-      release_type:
-        type: choice
-        default: none
-        options:
-          - none
-          - patch
-          - minor
-          - major
-      publish:
-        type: boolean
-      overwrite_tag:
-        type: boolean
-  workflow_call:
-    inputs:
-      version:
-        type: string
-        description: "Version: (e.g. -> v3.1.4-alpha+159)"
-      release_type:
-        type: string
-      publish:
-        type: boolean
-      overwrite_tag:
-        type: boolean
+  push:
+    tags:
+      - v[0-9]+.*
 
 jobs:
-  validate-input:
+  create-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
-
-      - name: Validate input
-        id: regex-match
-        run: |
-          text="${INPUT_VERSION}";
-          regex="^v([0-9]+)\.([0-9]+)\.([0-9]+)-?([[:alnum:]]*)\+?([0-9]*)$";
-          # Perform the regex match
-          if grep -qE "$regex" <<< "$text"; then
-              echo "match=true" >> "$GITHUB_OUTPUT";
-          else
-              echo "match=false" >> "$GITHUB_OUTPUT";
-          fi
-
-      - name: Fail if don't match regex
-        if: ${{ inputs.version && steps.regex-match.outputs.match == 'false' }}
-        run: |
-          echo "${{inputs.version}} doesn't match regex. Use a version similar to v3.1.4-alpha+159"
-          exit 1;
-
-  get-version:
-    needs: validate-input
-    runs-on: ubuntu-latest
-    steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v4.2.2
-
-      - name: Install jql
-        if: ${{ !inputs.version }}
-        uses: taiki-e/install-action@v2.49.46
-        with:
-          tool: jql
-
-      - name: Install cargo-bump
-        if: ${{ !inputs.version }}
-        uses: taiki-e/install-action@v2.49.46
-        with:
-          tool: cargo-bump
-
-      - name: Versions using None
-        id: none_version
-        if: ${{ !inputs.version && inputs.release_type == 'none' }}
-        run: |
-          version=$(cargo metadata --format-version=1 --no-deps | jql '"packages"|>"version"<|[0]' --raw-string);
-          echo $version;
-          echo "crate_version=$version" >> "$GITHUB_OUTPUT";
-          normal_version=v$version
-          echo $normal_version;
-          echo "tag_version=$normal_version" >> "$GITHUB_OUTPUT";
-
-      - name: Versions using release_type
-        id: new_version
-        if: ${{ !inputs.version && inputs.release_type != 'none' }}
-        run: |
-          cargo bump ${{ inputs.release_type }};
-          version=$(cargo metadata --format-version=1 --no-deps | jql '"packages"|>"version"<|[0]' --raw-string);
-          echo $version;
-          echo "crate_version=$version" >> "$GITHUB_OUTPUT";
-          normal_version=v$version
-          echo $normal_version;
-          echo "tag_version=$normal_version" >> "$GITHUB_OUTPUT";
-
-      - name: Versions using tag
-        id: full_version
-        if: inputs.version
-        run: |
-          tag=${{inputs.version}};
-          echo $tag;
-          echo "crate_version=${tag##v} >> GITHUB_OUTPUT";
-          echo ${tag##v};
-
-    outputs:
-      new_tag_version: ${{ inputs.version || steps.new_version.outputs.tag_version || steps.none_version.outputs.tag_version }}
-      new_crate_version: ${{ steps.full_version.outputs.crate_version || steps.new_version.outputs.crate_version || steps.none_version.outputs.crate_version }}
-
-  create-tag:
-    needs: get-version, update-attributions
-    runs-on: ubuntu-latest
-    steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v4.2.2
-
-      - run: git pull
-
-      - uses: mukunku/tag-exists-action@v1.6.0
-        if: ${{ inputs.overwrite_tag }}
-        id: check-tag-overwrite
-        with:
-          tag: ${{  needs.get-version.outputs.new_tag_version }}
-
-      - name: Delete tag
-        if: ${{ steps.check-tag-overwrite.outputs.exists == 'true' }}
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git fetch --tags
-          git tag -d ${{ needs.get-version.outputs.new_tag_version }}
-          git push -d origin ${{  needs.get-version.outputs.new_tag_version }}
-
-      - uses: mukunku/tag-exists-action@v1.6.0
-        id: check-tag
-        with:
-          tag: ${{ needs.get-version.outputs.new_tag_version}}
-
-      - name: Create tag
-        if: steps.check-tag.outputs.exists == 'false'
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git tag ${{ needs.get-version.outputs.new_tag_version}}
-          git push origin ${{  needs.get-version.outputs.new_tag_version}}
-
-  create-release:
-    needs: [get-version, create-tag]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v4.2.2
-
       - uses: taiki-e/create-gh-release-action@v1.9.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # (optional) Path to changelog.
           changelog: CHANGELOG.md
-          allow-missing-changelog: true
-          ref: refs/tags/${{ needs.get-version.outputs.new_tag_version }}
+          # (required) GitHub token for creating GitHub Releases.
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-  build-and-release:
-    needs: [get-version, create-release, check-crate-type]
-    if: ${{ needs.check-crate-type.outputs.is_bin == 'true' }}
-    name: ${{ matrix.target }} (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - {os: ubuntu-latest, target: x86_64-unknown-linux-gnu, cross: false}
-          - {os: windows-latest, target: x86_64-pc-windows-msvc, cross: false}
-
+  upload-assets:
+    needs: create-release
+    runs-on: ubuntu-latest
     steps:
-      - name: Fetch Repository
-        uses: actions/checkout@v4.2.2
-        with:
-          ref: ${{ needs.get-version.outputs.new_tag_version }}
-
-      - name: Install stable toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@v1.11.0
-        with:
-          target: ${{ matrix.target }}
-
-      - name: Install cross-compilation tools
-        if: ${{ matrix.cross }} == 'true'
-        uses: taiki-e/setup-cross-toolchain-action@v1.28.3
-        with:
-          target: ${{ matrix.target }}
-
+      - uses: actions/checkout@v4.2.2
       - uses: taiki-e/upload-rust-binary-action@v1.24.0
         with:
-          bin: ${{ github.event.repository.name }}
-          target: ${{ matrix.target }}
-          include: attribution
-          archive: $bin-$tag-$target
+          # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
+          # Note that glob pattern is not supported yet.
+          bin: ...
+          # (required) GitHub token for uploading assets to GitHub Releases.
           token: ${{ secrets.GITHUB_TOKEN }}
-          ref: refs/tags/${{  needs.get-version.outputs.new_tag_version }}
-          checksum: sha256
