--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -31,16 +31,16 @@ jobs:
             os: ubuntu-latest
             use_cross: true
           - target: aarch64-pc-windows-msvc
-            os: windows-2022
+            os: windows-latest
             use_cross: false
           - target: x86_64-unknown-linux-gnu
-            os: ubuntu-22.04
+            os: ubuntu-latest
             use_cross: false
           - target: x86_64-unknown-linux-musl
-            os: ubuntu-22.04
+            os: ubuntu-latest
             use_cross: true
           - target: x86_64-pc-windows-msvc
-            os: windows-2022
+            os: windows-latest
             use_cross: false
 
     timeout-minutes: 60
