--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '40 2 * * 1,3,5,6'
+    - cron: '40 2 * * *'
 
 jobs:
   lint:
