--- a/.github/workflows/updatecheck.yml
+++ b/.github/workflows/updatecheck.yml
@@ -22,8 +22,9 @@ jobs:
     continue-on-error: true
     env:
       CARGO_RESOLVER_INCOMPATIBLE_RUST_VERSIONS: allow
+
     steps:
-      - uses: actions/checkout@v5.0.0
+      - uses: actions/checkout@v5
 
       - name: Install stable Rust
         run: |
@@ -37,11 +38,11 @@ jobs:
         run: cargo build --verbose
 
       - name: Run tests and capture JSON output
-        run: cargo test -- --format=json > test-results.json
+        run: cargo test --message-format=json > test-results.json
 
       - name: Generate SARIF report
         run: |
-          jq -n --argjson results "$(jq . test-results.json)" \
+          jq -n --argjson results "$(jq -s . test-results.json)" \
             '{ version: "2.1.0", runs: [ { tool: { driver: { name: "cargo test", semanticVersion: "1.0" } }, results: $results } ] }' \
             > report.sarif
 
@@ -54,4 +55,4 @@ jobs:
         uses: actions/upload-artifact@v4.6.2
         with:
           name: sarif-report
-          path: report.sarif
+          path: re port.sarif
