--- a/.github/workflows/clippy-rs.yml
+++ b/.github/workflows/clippy-rs.yml
@@ -16,7 +16,7 @@ jobs:
             - uses: actions/checkout@v5.0.0
             - uses: actions-rs/toolchain@v1.0.6
               with:
-                  toolchain: nightly
+                  toolchain: stable
                   components: clippy
                   override: true
             - uses: actions-rs-plus/clippy-check@v2.3.0
